--- a/buildmymusic/templates/default.html
+++ b/buildmymusic/templates/default.html
@@ -13,7 +13,7 @@
       A++
     </h1>
     <br>
-    <form action = "" method = "post">
+    <form action = "/search" method = "post">
     <center><input type = "text" name = "search" style = "width: 300px; height: 30px"/>
     <input type="submit" value="search"></center>
     </form>
@@ -41,5 +41,10 @@
         <center><h3>??</h3></center>
       </div>
     </div>
+    {{songs}}
+    <br>
+    {{artists}}
+    <br>
+    {{albums}}
   </body>
 </html>
