--- a/buildmymusic/templates/welcome.html
+++ b/buildmymusic/templates/welcome.html
@@ -2,30 +2,22 @@
 <html>
   <header>
     <title>
-      Welcome!
+      Welcome to Buildmymusic!
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/welcome.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="my_script.js"></script>
   </header>
   <body>
-    <h1>
-      Welcome to ...
-    </h1>
-    <br>
-    <center><img height="150" width="150" src = http://www.tagetik.com/intouch2015/user.png></img></center>
-    <br>
-    <form action = "/default" method="post">
-      <p>
-        <h3>Please enter the following:</h3>
-        <center>Email: <input type = "text" name = "email"/></center>
-        <br>
-        <center>Username: <input type = "text" name "username"/></center>
-        <br>
-        <center>Password: <input type = "text" name "password"/></center>
-        <br>
-        <center><input type="submit" value="Log in"></center>
-      </p>
-    </form>
+    <div id='header'>
+      <h1>
+        Welcome to Buildmymusic!
+      </h1>
+    </div>
+    <div class = 'myButton'>
+      <form action = "/" method="post">
+        <input type="submit" value='Login'<a href="#" class="myButton"></a>
+      </form>
+    </div>
   </body>
 </html>
