--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -1,12 +1,179 @@
-h1{text-align: center;
-color: red;}
-.centerbox{width: 400px; height: 500px; border: 1px solid black;}
-.leftbox{position: absolute;
-     top: 310px;
-     left: 25px;
-     width: 200px;
-     border: 1px solid black ;}
-#outerbox{float: left;}
-#home{width: 200px; border: 1px solid black;}
-#likes{width: 200px; border: 1px solid black;}
-#events{width: 200px; border: 1px solid black;}
+h1{float:left;
+  clear:both;
+  position:relative;
+   color: red;
+ left: 500px;}
+body{margin-left: 50px;
+margin-right:100px;}
+
+#searching{
+          float:left;
+          clear:both;
+          position:relative;
+          left:400px;}
+
+.centerbox{
+          /*position: fixed;*/
+          width: 550px;
+          height: 575px;
+          border: 3px solid black;
+          /*left: 450px;
+          top: 200px;*/
+          float: left;
+          margin-left: 50px;
+          clear: both;
+          left: 250px;
+          top: 20px;
+          margin-right: 50px;
+          position: relative;
+          }
+
+
+/*#profile {
+  position: fixed;
+  background: white;
+  border: 3px solid black;
+  height: 60px;
+  width: 230px;
+  left:90px;
+  top:275px;
+}*/
+/*#likes {
+  position: fixed;
+  background: white;
+  border: 3px solid black;
+  height: 60px;
+  width: 230px;
+  left:90px;
+  top:375px;
+}
+#events {
+  position: fixed;
+  background: white;
+  border: 3px solid black;;
+  height: 60px;
+  width: 230px;
+  left:90px;
+  top:475px;
+}
+
+#aboutus {
+  position: fixed;
+  background: white;
+  border: 3px solid black;
+  height: 60px;
+  width: 230px;
+  left:90px;
+  top:575px;
+}*/
+/*body{
+      min-width: 1300px;
+      min-height: 700px;
+}*/
+.recentlikes{
+           /*position: fixed;*/
+           width: 250px;
+           height: 275px;
+           border: 3px solid black;
+           left: 1100px;
+           top: 150px;
+           float: left;
+            clear: left;
+            position: relative;
+            top: -650px;
+            left: 920px;
+            margin-right: 25px;
+            margin-top: 25px;
+            margin-bottom: 25px;
+            }
+.recentevents{
+          /*position: fixed;*/
+           width: 250px;
+           height: 275px;
+           border: 3px solid black;
+           left: 1100px;
+           top: 475px;
+           float: left;
+           clear: both;
+           position: relative;
+           left: 920px;
+           top: -1250px;
+          }
+  #profile {
+  /*position: fixed;*/
+  font-family: Georgia;
+  color: #ffffff;
+  font-size: 20px;
+  border-radius: px;
+  background: #3498db;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  left:90px;
+  top:275px;
+  height: 60px;
+  width: 230px;
+}
+
+#likes {
+/*position: fixed;*/
+font-family: Georgia;
+color: #ffffff;
+font-size: 20px;
+border-radius: px;
+background: #3498db;
+padding: 10px 20px 10px 20px;
+text-decoration: none;
+left:90px;
+top:335px;
+height: 60px;
+width: 230px;
+}
+
+#events {
+/*position: fixed;*/
+font-family: Georgia;
+color: #ffffff;
+font-size: 20px;
+border-radius: px;
+background: #3498db;
+padding: 10px 20px 10px 20px;
+text-decoration: none;
+left:90px;
+top:395px;
+height: 60px;
+width: 230px;
+}
+
+#aboutus {
+/*position: fixed;*/
+font-family: Georgia;
+color: #ffffff;
+font-size: 20px;
+border-radius: px;
+background: #3498db;
+padding: 10px 20px 10px 20px;
+text-decoration: none;
+left:90px;
+top:455px;
+height: 60px;
+width: 230px;
+}
+
+.buttons{
+          margin-right: 25px;
+          margin-bottom: 50px;
+          margin-top: 50px;
+          position: relative;
+          bottom: 500px;
+          clear: both;
+        }
+
+/*.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}*/
