--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -26,6 +26,7 @@ margin-right:100px;}
           top: 20px;
           margin-right: 50px;
           position: relative;
+          overflow: scroll;
           }
 
 
