i was taken away from the project and can no longer edit

--- a/buildmymusic/templates/profile.html
+++ b/buildmymusic/templates/profile.html
@@ -4,6 +4,19 @@
     <title>Build My music</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/profile.css">
   </head>
+  <style>
+div {
+    background-color: lightgrey;
+    width: 400px;
+    padding: 25px;
+    border: 5px solid navy;
+    margin: 5px;
+    height: 320px;
+    overflow: scroll;
+}
+</style>
+<div>Enter Your Information here!!!!!!</div>
+
   <body>
     <strong>BUILD MY MUSIC</strong>
     <h1>My Profile</h1>
@@ -11,8 +24,8 @@
     <input type="file" style="visibility:hidden;" id="uploadme" />
     <input type="button" id="clickme" value="Upload Photo!" />
     <p>Welcome Build my Music where you get the playlist that you want and the songs you want to hear</p>
-    <h2>Your information goes here</h2>
-    <img src="http://www.maths.leeds.ac.uk/uploads/tx_templavoila/music.png">
+    <h2>Auto-Biography</h2>
+    <img height="190" src="http://www.maths.leeds.ac.uk/uploads/tx_templavoila/music.png">
     <!--this is the first paragraph <br>
     <p>second paragraph</b>
     <!-- this is a comment -->
