--- a/buildmymusic/stylesheets/profile.css
+++ b/buildmymusic/stylesheets/profile.css
@@ -1,24 +1,35 @@
 body {
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  background-image: url("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSGxjyqdFMtJpklUvFN7za0_wnTZeZCeNGC623RylLV497Qg54R"), url("img_flwr.gif");
+  background-image: url("http://wallzoa.com/wp-content/uploads/2013/06/plain-blue-backgrounds.jpg"), url("img_flwr.gif");
   background-color: #cccccc;
-  color: white;
+  color: Pink;
 }
+body {
+  text-align: center;
+ }
 
+#page-wrap {
+  text-align: left;
+  width: 800px;
+  margin: 0 auto;
+}
 h1 {
-  color: red;
-  background-color: #F0FFFF;
+  color: white;
+  /*background-color: #F0FFFF;*/
 }
 
 h2 {
-  color: red;
-  background-color: #F0FFFF;
+  color: orange;
+  /*background-color: #F0FFFF;*/
+  top: 50px;
 }
 
+
+
 p {
-  color: red;
-  background-color: #F0FFFF;
+  color: green;
+  /*background-color: #F0FFFF;*/
 }
 /* id */
 #test {
@@ -32,4 +43,19 @@ p{
   height: 200px;
 }
 
+div {
+    position: absolute;
+    left: 0px;
+    top: 400px;
+    color: blue;
+}
+/*image2 {
+    position: absolute;*/
+
+}
+#image1 {
+    position: absolute;
+    left: 0px;
+    top: 40px;
+}
 input[type=file] { width: 1px; }
