--- a/buildmymusic/templates/default.html
+++ b/buildmymusic/templates/default.html
@@ -10,11 +10,7 @@
   </header>
   <body>
     <h1>
-      <center>A++</center>
-<<<<<<< HEAD
-
-=======
->>>>>>> f6a88e7b944e037f83ebae8c93f70e8473e48e61
+      <center>Buildmymusic</center>
     </h1>
     <br>
     <form action = "/search" method = "post">
