--- a/buildmymusic/templates/search.html
+++ b/buildmymusic/templates/search.html
@@ -2,15 +2,15 @@
 <html>
   <header>
     <title>
-      default
+      Buildmymusic
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="my_script.js"></script>
+    <script src="default.js"></script>
   </header>
   <body>
     <h1>
-      A++
+      <center>Buildmymusic</center>
     </h1>
     <br>
     <form action = "/search" method = "post">
@@ -22,21 +22,35 @@
     <br>
     <br>
     <center><div class = "centerbox">
-      search page
+      {% for i in searches %}
+      {{i.title}} , {{i.artist}} , {{i.album}}
+      <br>
+      <br>
+      {% endfor %}
     </center></div>
 
-    <div class="leftbox">
-      <figure id ="profile"><center><br>My Profile</center></figure>
-      <figure id ="likes"><center><br>Likes</center></figure>
-      <figure id ="events"><center><br>Events</center></figure>
-      <figure id ="aboutus"><center><br>About Us</center></figure>
+    <div class = "buttons">
+      <form action = "/profile" method = "get">
+        <input type = "submit" id = "profile" value = "Profile">
+      </form>
+      <form action = "/likes" method = "post">
+        <input type = "submit" id = "likes" value = "Likes">
+      </form>
+      <form action = "/events" method = "post">
+        <input type = "submit" id = "events" value = "Events">
+      </form>
+      <form action = "/aboutus" method = "get">
+        <input type = "submit" id = "aboutus" value = "About Us">
+      </form>
     </div>
+
     <div class = "recentlikes">
       <center>Recently added likes:</center>
     </div>
     <div class = "recentevents">
       <center>Recently added events:</center>
     </div>
+
 
   </body>
 </html>
