--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -174,3 +174,12 @@ h1{
                padding-bottom: 10px;
                padding-right: 10px;
            }
+#addedlikes{
+              font-family:"Yanone Kaffeesatz";
+              color: white;
+            }
+
+#addedevents{
+              font-family:"Yanone Kaffeesatz";
+              color: white;
+            }
