--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -89,6 +89,7 @@ h1{
           top:335px;
           height: 60px;
           width: 230px;
+          overflow: scroll;
         }
 
 #events {
@@ -104,6 +105,7 @@ h1{
             top:395px;
             height: 60px;
             width: 230px;
+            overflow: scroll;
         }
 
 #aboutus {
@@ -122,7 +124,9 @@ h1{
           }
 
 
-#thumbsuplike{border: 1px solid black;}
+#thumbsuplike {
+  border: 1px solid black;
+}
 
 #logout{
           position: relative;
