--- a/buildmymusic/templates/default.html
+++ b/buildmymusic/templates/default.html
@@ -12,35 +12,21 @@
   </header>
   <body>
     <h1>
-<<<<<<< HEAD
-      <center>A++</center>
-
-=======
-
       <center>Buildmymusic</center>
-
->>>>>>> 1dd53bd4965752f10cfd919c2129809ca6fd5f00
     </h1>
     <br>
     <form action = "/search" method = "post">
       <div id = "searching">
       <center><input type = "text" name = "search" style = "width: 450px; height: 30px"/>
       <!-- <input type="submit" value="search"></center> -->
-<<<<<<< HEAD
-      <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center> 
-=======
       <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
->>>>>>> 1dd53bd4965752f10cfd919c2129809ca6fd5f00
+
       </div>
     </form>
     <br>
     <br>
     <div class = "centerbox">
-      {% for i in searches %}
-      <center><p id = "results">
-        Song: {{i.title}} <br> Artist: {{i.artist}} <br> Album: {{i.album}} <br> <input type="image" src="http://www.clker.com/cliparts/l/M/g/8/7/T/black-and-white-thumbs-up-md.png" height = "35" width = "35" name="Like" id="thumbsuplike" />
-      </p></center>
-      {% endfor %}
+        something goes here
     </div>
 
     <div class = "buttons">
