--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/profile.css">
   </head>
   <body>
-    <strong>BUILD MY MUSIC</strong>
-    <h1>My Profile</h1>
-    <img height="240" src="http://img3.wikia.nocookie.net/__cb20121227201208/jamesbond/images/6/61/Generic_Placeholder_-_Profile.jpg">
-    <input type="file" style="visibility:hidden;" id="uploadme" />
-    <input type="button" id="clickme" value="Upload Photo!" />
-    <p>Welcome Build my Music where you get the playlist that you want and the songs you want to hear</p>
-    <h2>Your information goes here</h2>
+    <strong>About us</strong>
+    <h1>About us</h1>
+    <img height="240" src="">
+    <p></p>
+    <h2></h2>
     <img src="http://www.maths.leeds.ac.uk/uploads/tx_templavoila/music.png">
     <!--this is the first paragraph <br>
     <p>second paragraph</b>
