--- a/buildmymusic/stylesheets/profile.css
+++ b/buildmymusic/stylesheets/profile.css
@@ -1,7 +1,8 @@
 body {
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  background-image: url("http://wallzoa.com/wp-content/uploads/2013/06/plain-blue-backgrounds.jpg"), url("img_flwr.gif");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/2a/Chicago_-_Night.jpg");
+  
   background-color: #cccccc;
   color: Pink;
 }
