--- a/buildmymusic/templates/likes.html
+++ b/buildmymusic/templates/likes.html
@@ -5,6 +5,7 @@
       Buildmymusic
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="default.js"></script>
 
@@ -16,7 +17,7 @@
     <br>
     <form action = "/search" method = "post">
       <div id = "searching">
-      <center><input type = "text" name = "search" style = "width: 450px; height: 30px"/>
+      <center><input type = "text" id = "searchbar" name = "search" style = "width: 500px; height: 30px"/>
       <!-- <input type="submit" value="search"></center> -->
       <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
       </div>
@@ -28,8 +29,8 @@
     </div>
 
     <div class = "buttons">
-      <form action = "/default" method = "get">
-        <input type="image" src="http://images.clipartpanda.com/brick-house-clipart-RcdAj5Xc9.png" height = "80" width = "80" name="Like" id="gohome" />
+      <form action = "/otherdefault" method = "get">
+        <input type="image" src="http://searchengineland.com/figz/wp-content/seloads/2013/03/logo_512-300x300.png" height = "80" width = "80" name="Like" id="gohome" />
       </form>
       <br>
       <form action = "/profile" method = "get">
@@ -49,12 +50,8 @@
       <h2>Log Out</h2>
     </div>
 
-    <div class = "recentlikes">
-      <center id = "addedlikes"><h3>Recently added likes:</h3></center>
-    </div>
-    <div class = "recentevents">
-      <center id = "addedevents"><h3>Recently added events:</h3></center>
-    </div>
+    <img id = "musicnote" src = "http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/black-paint-splatter-icons-media/001603-black-paint-splatter-icon-media-music-eighth-notes.png" height = "500" width = "500">
+
 
   </body>
 </html>
