--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -59,6 +59,7 @@ h1{
             top: -500px;
             clear: both;
             left: 95px;
+            width: 200px;
           }
 
 #profile {
