--- a/buildmymusic/templates/search.html
+++ b/buildmymusic/templates/search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="default.js"></script>
+    <script src="scripts/default.js"></script>
 
   </header>
   <body>
@@ -29,9 +29,15 @@
     <div class = "centerbox">
 
       {% for i in searches %}
-      <p id = "results">
-        <strong>Song:</strong> {{i.title}}<br> <strong>Artist:</strong> {{i.artist}} <br><strong>Album:</strong> {{i.album}}<br> <input type="image" src="http://www.clker.com/cliparts/l/M/g/8/7/T/black-and-white-thumbs-up-md.png" height = "35" width = "35" name="Like" id="thumbsuplike" />
-      </p>
+      <div id = "results{{loop.index}}">
+        <strong>Song:</strong>
+        <span class="song">{{i.title}}</span><br>
+        <strong>Artist:</strong>
+        <span class="artist">{{i.artist}}</span><br>
+        <strong>Album:</strong>
+        <span class="album">{{i.album}}</span><br>
+        <input type="image" src="http://www.clker.com/cliparts/l/M/g/8/7/T/black-and-white-thumbs-up-md.png" height = "35" width = "35" name="Like" class="like" />
+      </div>
       {% endfor %}
 
     </div>
