put in watermark and audio visuals

--- a/buildmymusic/templates/aboutus.html
+++ b/buildmymusic/templates/aboutus.html
@@ -6,9 +6,9 @@
       Buildmymusic
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="default.js"></script>
+    <script src="jquery.watermarkinput.js" type="text/javascript"></script>
+    <script src="scripts/default.js"></script>
 
   </header>
   <body>
@@ -20,7 +20,7 @@
     <br>
     <form action = "/search" method = "post">
       <div id = "searching">
-      <center><input type = "text" id = "searchbar" name = "search" style = "width: 500px; height: 30px"/>
+      <center><input type = "text" id = "searchbar" style = "width: 500px; height: 30px"/>
       <!-- <input type="submit" value="search"></center> -->
       <input type="image" src="http://www.clker.com/cliparts/Y/x/X/j/U/f/search-button-without-text-md.png" height = "30" width = "30" name="searchbutton" id = "search"></center>
       </div>
@@ -29,7 +29,10 @@
     <br>
     <br>
     <div class = "centerbox">
-        About Us
+        <center>
+          <strong><h2> About the Creators </h2></strong>
+        </center>
+        <br>
     </div>
 
     <div class = "buttons">
