--- a/buildmymusic/templates/default.html
+++ b/buildmymusic/templates/default.html
@@ -5,10 +5,9 @@
       Buildmymusic
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="jquery.watermarkinput.js" type="text/javascript"></script>
     <script src="scripts/default.js"></script>
-
   </header>
   <body>
     <h1>
