likes page works

--- a/buildmymusic/stylesheets/default.css
+++ b/buildmymusic/stylesheets/default.css
@@ -167,6 +167,10 @@ h1{
          position: relative;
          left:80px;
        }
+#likedmusic{
+              position: relative;
+              left:-600px;
+            }
 
 /*.recentevents {*/
  /* position: fixed; */
